--- a/website3.html
+++ b/website3.html
@@ -88,6 +88,11 @@
             <label for=""like_no">No</label>
         </div>
 
-    
+   
+        <img src="purple.jpg" alt="Purple" class="center">
 
+        <p5>
+            <p5 id="myHeader">My Header</p5>
+        </p5>
+    
 </body>
